Include class name for label cell and set an SCSS fixed min-with for this cell so that it doesn't jump around in response to content changes.

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -264,6 +264,10 @@ $size-bin-finance-3: 80px;
   text-align: right;
 }
 
+.cell--label {
+  min-width: 300px;
+}
+
 // .table-column {
 //   display: table-cell;
 // }
